--- a/construction-app/client/src/styles/Navbar.css
+++ b/construction-app/client/src/styles/Navbar.css
@@ -3,8 +3,7 @@
   width: 250px;
   height: 100vh;
   position: fixed;
-  background-image: linear-gradient(30deg , #0048bd, #44a7fd);
-  border-top-right-radius: 80px;
+  background-color: var(--main-color);
 }
 
 .navbar > .nav-btn {
