--- a/construction-app/client/src/styles/CustomerRegister.css
+++ b/construction-app/client/src/styles/CustomerRegister.css
@@ -46,7 +46,7 @@
     background-position: 10px 10px;
     background-repeat: no-repeat;
     display: inline-block;
-    width: 80%;
+    width: 100%;
     box-sizing: border-box;
     font-size: 16px;
     padding: 12px 20px 12px 40px;
@@ -88,7 +88,7 @@
     padding: 0px 20px;
     height: 46px;
     box-sizing: border-box;
-    width: 150px;
+    width: 200px;
     display: inline-block;
 }
 
@@ -103,6 +103,7 @@
 .topContent {
     display:flex;
     justify-content: space-between;
+    gap: 10px;
 }
 
 .newClientIcon {
