--- a/construction-app/client/src/styles/index.css
+++ b/construction-app/client/src/styles/index.css
@@ -110,3 +110,9 @@
 .unlocked:hover:before {
   height: 20px;
 }
+
+.react-datepicker__day--keyboard-selected {
+  border-radius: 0; 
+  background-color: #FFF;
+  color: #000;
+}
